# survey-studio-automation

./: .gitignore  Makefile  base_automation.py  config.json  get_daily_counters.py  get_operator_work_time.py  get_outgoing_calls.py  get_outgoing_calls_rtk.py  make_file_for_survey_studio.py  pyproject.toml  run.bat
params/: results.py
src/: settings.py
src/google_clients/: google_auth_client.py  google_sheets_client.py
src/params/: results.py  results_rtk.py
src/tasks/: base_automation.py  get_arrow_from_doc.py  get_arrow_from_doc_pharma.py  get_arrow_from_pharma.py  get_calls_groups.py  get_operator_work_time.py  get_outgoing_calls.py  get_outgoing_calls_rtk.py
src/types/: google_sheets.py
src/utils/: get_yesterday.py
